--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,2 @@
 Backstage[[:space:]]-[[:space:]]Wait[[:space:]]For[[:space:]]Me.mp4 filter=lfs diff=lfs merge=lfs -text
+*.mp4 filter=lfs diff=lfs merge=lfs -text
